syntax = "proto3";

package user;

option go_package = "./userpb";

message User {
    string id = 1;
    string login = 2;
    string email = 3;
    string billing_address = 4;
    string shipping_address = 5;
    string phone = 6;
}

message CreateUserReq {
    User user = 1;
}

message CreateUserRes {
    User user = 1;
}

message ReadUserReq {
    string id = 1;
}

message ReadUserRes {
    User user = 1;
}

message UpdateUserReq {
    User user = 1;
}

message UpdateUserRes {
    User user = 1;
}

message DeleteUserReq {
    string id = 1;
}

message DeleteUserRes {
    bool success = 1;
}

message ListUsersReq {}

message ListUsersRes {
    User user = 1;
}

service UserService {
    rpc CreateUser(CreateUserReq) returns (CreateUserRes);
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
    rpc ListUsers(ListUsersReq) returns (stream ListUsersRes);
}
